RESOLVED FIXED70622
Column rules positioned incorrectly in vertical-rl block with horizontal border or padding
https://bugs.webkit.org/show_bug.cgi?id=70622
Summary Column rules positioned incorrectly in vertical-rl block with horizontal bord...
mitz
Reported 2011-10-21 10:57:16 PDT
Column rules positioned incorrectly in vertical-rl block with horizontal border or padding
Attachments
Use the physical left border and padding for the left edge of horizontal column rules (38.04 KB, patch)
2011-10-21 11:00 PDT, mitz
bdakin: review+
mitz
Comment 1 2011-10-21 11:00:02 PDT
Created attachment 111987 [details] Use the physical left border and padding for the left edge of horizontal column rules
mitz
Comment 2 2011-10-21 11:02:31 PDT
Note You need to log in before you can comment on or make changes to this bug.