Column rules positioned incorrectly in vertical-rl block with horizontal border or padding https://bugs.webkit.org/show_bug.cgi?id=70622

Reviewed by Beth Dakin.

Source/WebCore:

Tests: fast/multicol/vertical-lr/rules-with-border-before.html
       fast/multicol/vertical-rl/rules-with-border-before.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintColumnRules): Changed to use the physical left border and padding for the
left edge of the horizontal column rule.

LayoutTests:

* fast/multicol/vertical-lr/rules-with-border-before-expected.png: Added.
* fast/multicol/vertical-lr/rules-with-border-before-expected.txt: Added.
* fast/multicol/vertical-lr/rules-with-border-before.html: Added.
* fast/multicol/vertical-rl/rules-with-border-before-expected.png: Added.
* fast/multicol/vertical-rl/rules-with-border-before-expected.txt: Added.
* fast/multicol/vertical-rl/rules-with-border-before.html: Added.



Canonical link: https://commits.webkit.org/86820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98115 268f45cc-cd09-0410-ab3c-d52691b4dbfc